      formatter.parser(parsername, lines)
    * moved / splitted request.py into MoinMoin/request/*
      Most stuff will be broken, please help fixing it (usually some imports
      will be missing and the adaptor script will need a change maybe):
      CGI works
      CLI works
      STANDALONE not
      MODPY not
      WSGI not
      FCGI not
      TWISTED not
    * added wikiutil.MimeType class (works internally with sanitized mime
      types because the official ones suck)
    * renamed parsers to module names representing sane mimetypes, e.g.:
      parser.wiki -> parser.text_moin_wiki
    * Added thread_monitor. It can be activated using:
      from MoinMoin.util import thread_monitor; thread_monitor.activate_hook()
    * Introduced scope parameter to CacheEntry() - if you specify 'farm', it
      will cache into a common directory for all wikis in the same farm, if you
      specify 'wiki', it will use a cache directory per wiki and if you specify
      'item', it will use a cache directory per item (== per page).
      Creating a CacheEntry without explicit scope is DEPRECATED.
    * smileys moved from MoinMoin.config to MoinMoin.theme

  New Features:

    * FeatureRequests/WikiEmailIntegration TODO:make some help page when stable
    * HTML parser (called "html") that allows you to use HTML on the page.
      Thanks to the trac team for the nice code.
    * You can have a common cache_dir for your farm (will save a bit space
      and cpu time as it shares some stuff).
      You need to set "cache_dir = '/some/farm/cachedir' in your farmconfig.
    * Added XMLRPC methods for attachment handling. Thanks to Matthew Gilbert.
    * Added TLS/SSL support to the standalone server. Thanks to Matthew Gilbert.
      To use TLS/SSL support you must also install the TLSLite library
      (http://trevp.net/tlslite/). Version 0.3.8 was used for development and
      testing.

  Bugfixes:
    * on action "info" page, "revert" link will not be displayed for empty page